--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-
-   <title>SASAv2</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    <link rel="icon" href="favicon.ico"> 
+   <title>SASAv2</title> 
+    <link href="assets/bootstrap.min.css" rel="stylesheet"> 
     <link href="assets/jumbotron.css" rel="stylesheet">
-  </head>
-
-  <body>
-  <app-root></app-root>
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+  </head> 
+  <body> 
+  <main-root></main-root> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="assets/jquery.min.js"><\/script>')</script>
     <script src="assets/popper.min.js"></script>
